--- a/works/snow/style.css
+++ b/works/snow/style.css
@@ -1,7 +1,12 @@
 html, body {
+  color: #FFF;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  background: #000;
+}
+
+canvas#canvas {
   background: #000000;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
