--- a/home/css/style.css
+++ b/home/css/style.css
@@ -2,6 +2,19 @@
   Common
 ********************/
 
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: Helvetica, verdana, monospace;
+  font-size: 100%;
+  background: #000;
+  padding: 0;
+  margin: 0;
+  letter-spacing: 0.2rem;
+  overflow: hidden;
+  line-height: 1.5;
+}
+
 a {
   color: #FFF;
   text-decoration: none;
@@ -14,17 +27,6 @@ p {
 
 h1 {
   font-size: 1.6rem;
-}
-
-html, body {
-  font-family: Helvetica, verdana, monospace;
-  font-size: 100%;
-  background: #000;
-  padding: 0;
-  margin: 0;
-  letter-spacing: 0.2rem;
-  overflow: hidden;
-  line-height: 1.5;
 }
 
 /********************
