--- a/works/grassGrow/style.css
+++ b/works/grassGrow/style.css
@@ -4,13 +4,15 @@
 
 html, body {
   font-family: Helvetica, verdana, monospace;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   color: #FFF;
   font-size: 100%;
   background: #000;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
-  overflow: hidden;
 }
 
 a {
@@ -46,7 +48,5 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000000;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #95E0BC;
 }
