--- a/works/milkyWay/style.css
+++ b/works/milkyWay/style.css
@@ -3,6 +3,8 @@
 ********************/
 
 html, body {
+  height: 100%;
+  width: 100%;
   font-family: Helvetica, verdana, monospace;
   color: #FFF;
   font-size: 100%;
