--- a/works/65536/style.css
+++ b/works/65536/style.css
@@ -50,3 +50,10 @@ p#loading {
 canvas#canvas {
   background: #FFFFFF;
 }
+
+div.controller {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1.6rem
+}
