--- a/home/css/style.css
+++ b/home/css/style.css
@@ -29,6 +29,10 @@ h1 {
   font-size: 1.6rem;
 }
 
+h2 {
+  padding: 1.6rem 0 0 1.6rem;
+}
+
 /********************
   Vehicles icon
 ********************/
