--- a/works/happyValentine/style.css
+++ b/works/happyValentine/style.css
@@ -12,7 +12,7 @@ html, body {
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
-  background: #1E1F27;
+  background: #ffdde1;
 }
 
 a {
