--- a/works/sineWave/style.css
+++ b/works/sineWave/style.css
@@ -53,13 +53,21 @@ canvas#canvas {
 
 div#controller {
   display: none;
+  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
-  padding: 1.6rem;
   background: #0871BC;
   opacity: 0.8;
-  overflow: scroll;
+  overflow-y: scroll;
+}
+
+div#controller > dl {
+  padding: 0 1.6rem;
+}
+
+p#closeController {
+  padding: 1.6rem;
 }
 
 p#openController {
