--- a/works/milkyWay/style.css
+++ b/works/milkyWay/style.css
@@ -8,11 +8,13 @@ html, body {
   font-family: Helvetica, verdana, monospace;
   color: #FFF;
   font-size: 100%;
-  background: #000;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 a {
