--- a/home/css/style.css
+++ b/home/css/style.css
@@ -81,13 +81,16 @@ div#main {
 }
 
 nav {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
+}
+
+nav > ul {
 }
 
 nav > ul > li {
   display: block;
-  padding: 0.8rem;
+  padding: 1.6rem 0 1.6rem 1.6rem;
   font-size: 0.8rem;
 }
 
