--- a/home/css/style.css
+++ b/home/css/style.css
@@ -26,11 +26,13 @@ p {
 }
 
 h1 {
+  padding: 0 0 0 0;
   font-size: 1.6rem;
 }
 
 h2 {
-  padding: 1.6rem 0 0 1.6rem;
+  padding: 1.6rem 1.6rem 0 1.6rem;
+  font-size: 1;
 }
 
 /********************
@@ -98,6 +100,42 @@ p#loading {
 }
 
 /********************
+  About
+********************/
+
+div#about {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  z-index: 2;
+}
+
+div#about > ul {
+  text-align: center;
+  padding: 1.6rem 0 0 0;
+}
+
+div#about > ul > li {
+  display: inline-block;
+  padding: 0 0.8rem;
+}
+
+div#about > p > img {
+  width: 50%;
+  margin: 0 25%;
+  border-radius: 50%;
+}
+
+div#about > p {
+  padding: 1.6rem 1.6rem 0 1.6rem;
+}
+
+/********************
   Works
 ********************/
 
@@ -108,10 +146,12 @@ div#works {
   position: absolute;
   top: 0;
   right: 0;
-  background: #000;
-  opacity: 0.8;
+  background: rgba(0, 0, 0, 0.8);
   color: #fff;
   z-index: 2;
+}
+
+div#works > p {
 }
 
 div#works > ul {
@@ -122,7 +162,7 @@ div#works > ul > li {
   padding: 1.6rem;
 }
 
-#close {
+.close {
   color: #fff;
   position: absolute;
   top: 1.6rem;
@@ -154,12 +194,16 @@ canvas#canvas {
     padding-right: 1.6rem;
   }
 
+  div#about {
+    width: 30%;
+  }
+
   div#works {
-    width: 40%;
+    width: 30%;
   }
 
   iframe#dispWorks {
-    width: 60%;
+    width: 70%;
     height: 100%;
     position: absolute;
     overflow: hidden;
