--- a/home/css/style.css
+++ b/home/css/style.css
@@ -135,6 +135,10 @@ div#about > p {
   padding: 1.6rem 1.6rem 0 1.6rem;
 }
 
+div#about > p:last-child {
+  padding-bottom: 1.6rem;
+}
+
 /********************
   Works
 ********************/
