--- a/home/css/style.css
+++ b/home/css/style.css
@@ -20,6 +20,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 p {
   padding: 1.6rem 0;
   font-size: 0.8rem;
