--- a/home/css/style.css
+++ b/home/css/style.css
@@ -170,6 +170,10 @@ div#works > ul > li {
   padding: 1.6rem;
 }
 
+div#works > ul > li:last-child {
+  padding-bottom: 0;
+}
+
 .close {
   color: #fff;
   position: absolute;
