--- a/home/css/style.css
+++ b/home/css/style.css
@@ -14,6 +14,7 @@ html, body {
   overflow: hidden;
   line-height: 1.6;
   cursor: pointer;
+  user-select: none;
 }
 
 a {
@@ -170,10 +171,6 @@ div#works > ul {
 
 div#works > ul > li {
   padding: 1.6rem;
-}
-
-div#works > ul > li:last-child {
-  padding-bottom: 0;
 }
 
 .close {
