--- a/home/css/style.css
+++ b/home/css/style.css
@@ -49,7 +49,7 @@ h2 {
   position: absolute;
   bottom: 0;
   left: 1.6rem;
-  color: #ff4d4d;
+  color: #EF3B36;
   -webkit-animation: drive 30s linear infinite;
           animation: drive 30s linear infinite;
 }
