--- a/home/css/style.css
+++ b/home/css/style.css
@@ -34,6 +34,7 @@ p {
 h1 {
   padding: 0 0 0 0;
   font-size: 1.6rem;
+  text-shadow: 0px 0px 5px black;
 }
 
 h2 {
@@ -88,10 +89,15 @@ div#main {
   padding: 1.6rem;
 }
 
+div#main > p {
+  text-shadow: 0px 0px 5px black;
+}
+
 nav > ul > li {
   display: inline-block;
   padding-bottom: 1.6rem;
   font-size: 0.8rem;
+  text-shadow: 0px 0px 5px black;
 }
 
 /********************
