--- a/home/css/style.css
+++ b/home/css/style.css
@@ -50,7 +50,7 @@ h2 {
   position: absolute;
   bottom: 0;
   left: 1.6rem;
-  color: #EF3B36;
+  color: #f2f2f2;
   -webkit-animation: drive 30s linear infinite;
           animation: drive 30s linear infinite;
 }
