--- a/home/css/style.css
+++ b/home/css/style.css
@@ -2,19 +2,31 @@
   Common
 ********************/
 
+.cf::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
 html, body {
   height: 100%;
   width: 100%;
+  color: #FFF;
+  position: fixed;
+  overflow-y: scroll;
   font-family: Helvetica, verdana, monospace;
   font-size: 100%;
   background: #000;
   padding: 0;
   margin: 0;
-  letter-spacing: 0.2rem;
-  overflow: hidden;
   line-height: 1.6;
-  cursor: pointer;
-  user-select: none;
+}
+
+footer {
+  color: #FFF;
+  font-size: 0.8rem;
+  text-align: right;
+  padding: 1.6rem;
 }
 
 a {
@@ -34,12 +46,23 @@ p {
 h1 {
   padding: 0 0 0 0;
   font-size: 1.6rem;
-  text-shadow: 0px 0px 10px black;
+  float: left;
+  padding: 1.6rem;
 }
 
 h2 {
   padding: 1.6rem 1.6rem 0 1.6rem;
-  font-size: 1;
+  font-size: 1.2rem;
+}
+
+h3 {
+  padding: 1.6rem 1.6rem 0 1.6rem;
+  font-size: 1.2rem;
+}
+
+.inner {
+  width: 90%;
+  margin: 0 5%;
 }
 
 /********************
@@ -78,26 +101,23 @@ h2 {
 }
 
 /********************
-  Main
+  Header
 ********************/
 
-div#main {
+header {
   color: #FFF;
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  padding: 1.6rem;
 }
 
-div#main > p {
-  text-shadow: 0px 0px 10px black;
+nav {
+  float: right;
 }
 
-nav > ul > li {
-  display: inline-block;
-  padding-bottom: 1.6rem;
-  font-size: 0.8rem;
-  text-shadow: 0px 0px 10px black;
+nav > ul > li{
+  padding: 2.4rem 1.6rem 0 0;
 }
 
 /********************
@@ -115,81 +135,75 @@ p#loading {
   About
 ********************/
 
-div#about {
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.8);
+section#about {
   color: #fff;
-  z-index: 2;
 }
 
-div#about > p > a{
+section#about p > a{
   text-decoration: underline;
 }
 
-div#about > ul {
+section#about ul {
   text-align: center;
   padding: 1.6rem 0 0 0;
 }
 
-div#about > ul > li {
+section#about ul > li {
   display: inline-block;
   padding: 0 0.8rem;
 }
 
-div#about > p > img {
-  width: 50%;
-  margin: 0 25%;
-  border-radius: 50%;
+section#about p > img {
+  width: 40%;
+  margin: 0 30%;
 }
 
-div#about > p {
+section#about p {
   padding: 1.6rem 1.6rem 0 1.6rem;
 }
 
-div#about > p:last-child {
-  padding-bottom: 1.6rem;
+section#about > section.aboutLeft > p {
+  text-align: center;
 }
 
 /********************
   Works
 ********************/
 
-div#works {
+section#works {
+  color: #FFF;
+}
+
+section#works > ul {
+  font-size: 0;
+  padding: 1.6rem 1.6rem 0 1.6rem;
+}
+
+section#works img {
   width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  z-index: 2;
+  vertical-align: bottom;
 }
 
-div#works > ul {
-  padding: 0 1.6rem;
+section#works > ul > li {
+  width: 100%;
+  font-size: 0.8rem;
+  text-align: center;
 }
 
-div#works > ul > li {
-  padding: 1.6rem;
+section#works > ul > li:last-child > p{
+  padding-bottom: 0;
 }
 
-.close {
-  color: #fff;
-  position: absolute;
-  top: 1.6rem;
-  right: 1.6rem;
-  z-index: 3;
+section#works > ul > li:hover {
 }
 
 /********************
   Canvas
 ********************/
+
+canvas {
+  display: block;
+}
 
 canvas#canvas {
   width: 100%;
@@ -198,6 +212,17 @@ canvas#canvas {
   background: #000000;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #000000, #434343);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #000000, #434343); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+canvas#canvasBack {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 100%;
+  overflow: hidden;
+  opacity: 0.3;
+  background: #000000;  /* fallback for old browsers */
 }
 
 /********************
@@ -218,26 +243,34 @@ canvas#canvas {
     display: inline-block;
   }
 
-  nav > ul > li {
-    padding-right: 1.6rem;
-  }
-  
-  div#about {
-    width: 30%;
+  .inner {
+    width: 50%;
+    margin: 0 25%;
   }
 
-  div#works {
-    width: 30%;
+  nav > ul > li{
+    display: inline-block;
+    padding: 2.4rem 1.6rem 0 0;
   }
 
-  iframe#dispWorks {
-    width: 70%;
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    background: #000000;
+  section#about > section.aboutLeft {
+    float: left;
+    width: 50%;
+    position: relative;
+  }
+
+  section#about > section.aboutRight {
+    float: right;
+    width: 50%;
+  }
+
+  section#works img {
+    width: 95%;
+  }
+
+  section#works > ul > li {
+    display: inline-block;
+    width: 33.333%;
   }
 
 }
