--- a/home/css/style.css
+++ b/home/css/style.css
@@ -12,7 +12,7 @@ html, body {
   height: 100%;
   width: 100%;
   color: #FFF;
-  position: fixed;
+  position: relative;
   overflow-y: scroll;
   font-family: Helvetica, verdana, monospace;
   font-size: 100%;
@@ -44,10 +44,7 @@ p {
 }
 
 h1 {
-  padding: 0 0 0 0;
   font-size: 1.6rem;
-  float: left;
-  padding: 1.6rem;
 }
 
 h2 {
@@ -106,18 +103,21 @@ h3 {
 
 header {
   color: #FFF;
-  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  padding: 1.6rem;
 }
 
 nav {
-  float: right;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(0, -50%);
 }
 
 nav > ul > li{
-  padding: 2.4rem 1.6rem 0 0;
+  padding: 1.6rem;
 }
 
 /********************
@@ -249,8 +249,6 @@ canvas#canvasBack {
   }
 
   nav > ul > li{
-    display: inline-block;
-    padding: 2.4rem 1.6rem 0 0;
   }
 
   section#about > section.aboutLeft {
