--- a/home/css/style.css
+++ b/home/css/style.css
@@ -9,11 +9,7 @@
 }
 
 html, body {
-  height: 100%;
-  width: 100%;
   color: #FFF;
-  position: fixed;
-  overflow-y: scroll;
   font-family: Helvetica, verdana, monospace;
   font-size: 100%;
   background: #000;
@@ -104,9 +100,10 @@ h3 {
 header {
   color: #FFF;
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 0;
   padding: 1.6rem;
+  transform: translate(0, -50%);
 }
 
 nav {
@@ -188,7 +185,7 @@ section#works > ul > li {
   width: 100%;
   font-size: 0.8rem;
   text-align: center;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
 section#works > ul > li:last-child > p{
