--- a/home/css/style.css
+++ b/home/css/style.css
@@ -99,7 +99,7 @@ nav > ul > li{
 
 section#works > ul {
   font-size: 0;
-  padding: 1.6rem 1.6rem 0 1.6rem;
+  padding: 1.6rem;
 }
 
 section#works > ul > li > a > img {
@@ -119,6 +119,26 @@ section#works > ul > li:hover {
 
 section#works > ul > li:last-child > p{
   padding-bottom: 0;
+}
+
+button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+}
+
+section#works button {
+  display: block;
+  margin: 0 auto;
+  padding: 0.8rem 1.6rem;
+  text-decoration: none;
+  color: #09BEFF;
+  border: solid 2px #09BEFF;
+  border-radius: 3px;
+  transition: .4s;
 }
 
 /********************
