--- a/home/css/style.css
+++ b/home/css/style.css
@@ -127,7 +127,9 @@ button{
   cursor: pointer;
   outline: none;
   padding: 0;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 section#works button {
@@ -138,12 +140,16 @@ section#works button {
   color: #09BEFF;
   border: solid 2px #09BEFF;
   border-radius: 3px;
-  box-shadow: 0 0 10px #09BEFF;
+  -webkit-box-shadow: 0 0 10px #09BEFF;
+          box-shadow: 0 0 10px #09BEFF;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
   transition: .4s;
 }
 
 section#works button:hover {
-  box-shadow: 0 0 100px #09BEFF;
+  -webkit-box-shadow: 0 0 100px #09BEFF;
+          box-shadow: 0 0 100px #09BEFF;
 } 
 
 /********************
