--- a/home/css/style.css
+++ b/home/css/style.css
@@ -52,6 +52,15 @@ h3 {
   padding: 1.6rem 1.6rem 0 1.6rem;
 }
 
+iframe#iframe {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 /********************
   Loading
 ********************/
@@ -216,7 +225,7 @@ canvas#canvasBack {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;
+  z-index: -2;
   top: 100%;
   overflow: hidden;
   opacity: 0.4;
