--- a/home/css/style.css
+++ b/home/css/style.css
@@ -124,6 +124,9 @@ section#works > ul > li {
 
 section#works > ul > li:hover {
   opacity: 1;
+  -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+        transform: scale(1.1);
 }
 
 section#works > ul > li:last-child > p{
