--- a/home/css/style.css
+++ b/home/css/style.css
@@ -124,6 +124,7 @@ section#works > ul > li {
 
 section#works > ul > li:hover {
   opacity: 1;
+  box-shadow: 0 0 10px #333;
   -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
         transform: scale(1.1);
