--- a/home/css/style.css
+++ b/home/css/style.css
@@ -122,14 +122,6 @@ section#works > ul > li {
   text-align: center;
 }
 
-section#works > ul > li:hover {
-  opacity: 1;
-  box-shadow: 0 0 10px #333;
-  -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-        transform: scale(1.1);
-}
-
 section#works > ul > li:last-child > p{
   padding-bottom: 0;
 }
@@ -294,10 +286,19 @@ canvas#canvasBack {
   section#works > ul > li {
     display: inline-block;
     width: 33.333%;
-    opacity: 0.8;
+    opacity: 0.9;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
     transition: 0.4s;
+  }
+
+  section#works > ul > li:hover {
+    opacity: 0.9;
+    -webkit-box-shadow: 0 0 10px #333;
+            box-shadow: 0 0 10px #333;
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
   }
 
   section#works > ul > li > a > img {
