--- a/home/css/style.css
+++ b/home/css/style.css
@@ -65,15 +65,83 @@ iframe#iframe {
   Loading
 ********************/
 
-p#loading {
+.lds-heart {
+  z-index: 1; 
+  display: block;
+  position: fixed;
+  width: 80px;
+  height: 80px;
+  transform-origin: 40px 40px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+      -ms-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.lds-heart div {
+  top: 32px;
+  left: 32px;
   position: absolute;
+  width: 32px;
+  height: 32px;
+  background: #ff4d4d;
+  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.lds-heart div:after,
+.lds-heart div:before {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: #ff4d4d;
+}
+
+.lds-heart div:before {
+  left: -24px;
+  border-radius: 50% 0 0 50%;
+}
+
+.lds-heart div:after {
+  top: -24px;
+  border-radius: 50% 50% 0 0;
+}
+
+@keyframes lds-heart {
+  0% {
+    transform: scale(0.95);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  39% {
+    transform: scale(0.85);
+  }
+  45% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+/*
+p#loading {
+  position: fixed;
+  z-index: 1; 
+  margin: 0;
+  padding: 0;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
-
+*/
 /********************
   Header
 ********************/
