--- a/home/css/style.css
+++ b/home/css/style.css
@@ -72,11 +72,11 @@ iframe#iframe {
   width: 80px;
   height: 80px;
   transform-origin: 40px 40px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(45deg);
-      -ms-transform: translate(-50%, -50%) rotate(45deg);
-          transform: translate(-50%, -50%) rotate(45deg);
+  top: 1rem;
+  right: 1.6rem;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .lds-heart div {
