--- a/works/stayHome/style.css
+++ b/works/stayHome/style.css
@@ -12,7 +12,7 @@ html, body {
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
-  background: #000000; 
+  background: #46B3B3; 
 }
 
 a {
@@ -48,12 +48,11 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000000; 
+  background: #46B3B3; 
 }
 
 div.controller {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 1.6rem
+  bottom: 1.6rem;
+  left: 1.6rem;
 }
