--- a/works/goToTheMoon/style.css
+++ b/works/goToTheMoon/style.css
@@ -13,7 +13,10 @@ html, body {
   letter-spacing: 0.2rem;
   overflow: hidden;
   background: #000;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 a {
