--- a/works/kiraYaba/style.css
+++ b/works/kiraYaba/style.css
@@ -5,7 +5,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
+  font-family: 'arial black', Helvetica, verdana, monospace;
   color: #FFFFFF;
   font-size: 100%;
   padding: 0;
@@ -13,6 +13,14 @@ html, body {
   letter-spacing: 0.2rem;
   overflow: hidden;
   background: rgb(234, 97, 133);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body {
+  position:  relative;
 }
 
 a {
@@ -21,16 +29,11 @@ a {
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
-h2 {
-  padding-top: 0.8rem;
-}
-
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
@@ -63,6 +66,7 @@ div.controller {
 }
 
 div.controller > ul > li {
+  padding-top: 0;
   width: 40px;
   height: 40px;
   display: inline-block;
