--- a/works/65536/style.css
+++ b/works/65536/style.css
@@ -5,14 +5,23 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
-  color: #FFFFFF;
+  font-family: 'arial black', Helvetica, verdana, monospace;
+  color: #FFF;
   font-size: 100%;
   background: #000;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
+  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body{
+  position: relative;
 }
 
 a {
@@ -20,13 +29,16 @@ a {
   text-decoration: none;
 }
 
-h1 {
-  font-size: 1.6rem;
+a:hover {
+  color: #09BEFF;
 }
 
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+h1 {
+  font-size: 2.4rem;
+}
+
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
