--- a/works/aquarium/style.css
+++ b/works/aquarium/style.css
@@ -5,8 +5,9 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
-  color: #FFFFFF;
+  font-family: 'arial black', Helvetica, verdana, monospace;
+  color: #FFF;
+  user-select: none;
   font-size: 100%;
   padding: 0;
   margin: 0;
@@ -17,18 +18,21 @@ html, body {
   background: linear-gradient(to bottom, #4286f4, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+body {
+  position:  relative;
+}
+
 a {
   color: #FFF;
   text-decoration: none;
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
