--- a/works/goToTheMoon/style.css
+++ b/works/goToTheMoon/style.css
@@ -5,7 +5,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
+  font-family: 'arial black', Helvetica, verdana, monospace;
   color: #FFF;
   font-size: 100%;
   padding: 0;
@@ -19,22 +19,21 @@ html, body {
           user-select: none;
 }
 
+body {
+  position:  relative;
+}
+
 a {
   color: #FFF;
   text-decoration: none;
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
-h2 {
-  padding-top: 0.8rem;
-}
-
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
