--- a/works/jewelrySnow/style.css
+++ b/works/jewelrySnow/style.css
@@ -5,7 +5,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
+  font-family: 'arial black', Helvetica, verdana, monospace;
   color: #FFF;
   font-size: 100%;
   background: #000;
@@ -13,6 +13,14 @@ html, body {
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body {
+  position:  relative;
 }
 
 a {
@@ -21,12 +29,11 @@ a {
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
