--- a/works/neonWave/style.css
+++ b/works/neonWave/style.css
@@ -5,14 +5,22 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
-  color: #FFFFFF;
+  font-family: 'arial black', Helvetica, verdana, monospace;
+  color: #FFF;
   font-size: 100%;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
   background: #000;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body {
+  position:  relative;
 }
 
 a {
@@ -21,12 +29,11 @@ a {
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
@@ -65,6 +72,10 @@ div#controller {
 
 div#controller > dl {
   padding: 0 1.6rem;
+}
+
+P {
+  padding: 1.6rem 0;
 }
 
 p#closeController {
