--- a/works/orangeKun/style.css
+++ b/works/orangeKun/style.css
@@ -5,32 +5,35 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-family: Helvetica, verdana, monospace;
-  color: #FFFFFF;
+  font-family: 'arial black', Helvetica, verdana, monospace;
+  color: #000;
   font-size: 100%;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
   background: #FFF;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body {
+  position:  relative;
 }
 
 a {
-  color: #FFF;
+  color: #000;
   text-decoration: none;
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
 }
 
-h2 {
-  padding-top: 0.8rem;
-}
-
-p {
-  padding: 0.8rem 0;
-  font-size: 0.8rem;
+ul > li {
+  padding-top: 1.6rem;
 }
 
 header#header {
@@ -56,7 +59,6 @@ canvas#canvas {
 }
 
 p#count {
-  color: #FFF;
   position: absolute;
   bottom: 1.6rem;
   left: 1.6rem;
