--- a/works/gap/style.css
+++ b/works/gap/style.css
@@ -6,14 +6,13 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'arial black', Helvetica, verdana, monospace;
-  color: #FFF;
+  color: #000;
   font-size: 100%;
-  background: #000;
   padding: 0;
   margin: 0;
   letter-spacing: 0.2rem;
   overflow: hidden;
-  user-select: none;
+  background: #000;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -25,7 +24,7 @@ body{
 }
 
 a {
-  color: #FFF;
+  color: #000;
   text-decoration: none;
 }
 
@@ -56,12 +55,5 @@ p#loading {
 ********************/
 
 canvas#canvas {
-  background: #000;
-}
-
-div.controller {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 1.6rem
+  background: #3e8e4c;
 }
